Fix chart colors on iOS

--- a/src/Graph.css
+++ b/src/Graph.css
@@ -1,5 +1,4 @@
 .graph-wrapper {
-  position: relative;
   height: 300px;
 }
 
